--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 		<div class="rootpage__info">
 			Особенности проекта
 		</div>
-		<h2>Готовые страницы:</h2>
+		<h2>Готові сторігки:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Главная</a></li>
+			<li><a target="_blank" href="home.html">Головна</a></li>
 			<li><a target="_blank" href="catalog.html">Каталог</a></li>
 			<li><a target="_blank" href="product.html">Карточка товара</a></li>
 		</ol>
-		<h2>Попапы:</h2>
+		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html#"></a></li>
 		</ol>
 		<div class="rootpage__tnx">
-			<h2>Спасибо за заказ!</h2>
-			<p>Буду рад (а) хорошему отзыву.</p>
-			<p>Обращайтесь еще!</p>
+			<h2>дякую за замовлення!</h2>
+			<p>Буду радий гарному відгуку.</p>
+			<p>звертайтесь ще!</p>
 		</div>
 		<div class="rootpage__contacts">
-			<h2>Мои контакты:</h2>
+			<h2>Мои контакти:</h2>
 			<p>Почта: <a href="mailto:kovbaivan12@gmail.com@gmail.com">kovbaivan12@gmail.com</a></p>
-			<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
-			<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
+			<p>Телефон: <a href="tel:8800800800">+380975886900</a></p>
+			<p>Соц. сеть: <a href="vanya_live">vanya_live</a></p>
 		</div>
 	</div>
 </body>
