--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<div class="rootpage">
 		<h1>Верстка «zlatmax»</h1>
 		<div class="rootpage__info">
-			Особенности проекта
+			властивості проекта
 		</div>
-		<h2>Готові сторігки:</h2>
+		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Головна</a></li>
 			<li><a target="_blank" href="catalog.html">Каталог</a></li>
